Fix bug 694290 caused by an image totally off the page.

This went away with the change to clipping, commit e0ba422, but we
might as well fix this long standing issue as well.